--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "projet 3",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./public/css/style.css"
+    "sass": "sass --watch ./sass/main.scss:./public/css/style.css",
+    "prefix": "postcss ./public/css/style.css --use autoprefixer -d ./public/css/prefixed/"
+
   },
   "repository": {
     "type": "git",
@@ -13,7 +15,8 @@
   "author": "guillaume",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/guillaumedbk/GuillaumeDeBackre_3_02082021/issues"
+    "url": "https://github.com/guillaumedbk/GuillaumeDeBackre_3_02082021/issues",
+    "browserslist": "last 4 versions"
   },
   "homepage": "https://github.com/guillaumedbk/GuillaumeDeBackre_3_02082021#readme"
 }
